# fade-2048

./: .gitignore  README.md  clean.sh  compile.sh
src/: CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
src/display/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  display.cpp  display.h  view.cpp  view.h
src/engine/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  engine.cpp  engine.h
src/motor/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  motor.cpp  motor.h
src/ut/: 2048_ut.cpp  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
